--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.6.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
